@@ -10,21 +10,12 @@ SeqVarData <- function(gds, sampleData, variantData) {
     class(gds) <- "SeqVarData"
 
     if (missing(sampleData)) {
-        filt.orig <- seqGetFilter(gds)
-        seqSetFilter(gds, sample.sel=1:.nSampUnfiltered(gds), verbose=FALSE)
-        sampleData <- AnnotatedDataFrame(data.frame(sample.id=seqGetData(gds, "sample.id"),
-                                                    stringsAsFactors=FALSE))
-        seqSetFilter(gds, sample.sel=filt.orig$sample.sel, verbose=FALSE)
-        
+        sampleData <- AnnotatedDataFrame(data.frame(matrix(nrow=.nSampUnfiltered(gds), ncol=0)))
     }
     gds@sampleData <- sampleData
     
     if (missing(variantData)) {
-        filt.orig <- seqGetFilter(gds)
-        seqSetFilter(gds, variant.sel=1:.nVarUnfiltered(gds), verbose=FALSE)
-        variantData <- AnnotatedDataFrame(data.frame(variant.id=seqGetData(gds, "variant.id"),
-                                                     stringsAsFactors=FALSE))
-        seqSetFilter(gds, variant.sel=filt.orig$variant.sel, verbose=FALSE)
+        variantData <- AnnotatedDataFrame(data.frame(matrix(nrow=.nVarUnfiltered(gds), ncol=0)))
     }
     gds@variantData <- variantData
     
@@ -38,19 +29,23 @@ SeqVarData <- function(gds, sampleData, variantData) {
 
 setValidity("SeqVarData",
             function(object) {
-                if (!("sample.id" %in% varLabels(sampleData(object)))) {
-                    return("sampleData does not have column sample.id")
+                if (ncol(sampleData(object)) > 0) {
+                    if (!("sample.id" %in% varLabels(sampleData(object)))) {
+                        return("sampleData does not have column sample.id")
+                    }
+                    if (!identical(seqGetData(object, "sample.id"),
+                                   sampleData(object)$sample.id)) {
+                        return("sample.id in sampleData does not match GDS file")
+                    }
                 }
-                if (!identical(seqGetData(object, "sample.id"),
-                               sampleData(object)$sample.id)) {
-                    return("sample.id in sampleData does not match GDS file")
-                }
-                if (!("variant.id" %in% varLabels(variantData(object)))) {
-                    return("variantData does not have column variant.id")
-                }
-                if (!identical(seqGetData(object, "variant.id"),
-                               variantData(object)$variant.id)) {
-                    return("variant.id in variantData does not match GDS file")
+                if (ncol(variantData(object)) > 0) {
+                    if (!("variant.id" %in% varLabels(variantData(object)))) {
+                        return("variantData does not have column variant.id")
+                    }
+                    if (!identical(seqGetData(object, "variant.id"),
+                                   variantData(object)$variant.id)) {
+                        return("variant.id in variantData does not match GDS file")
+                    }
                 }
                 TRUE
             })
@@ -65,10 +60,11 @@ setMethod("sampleData",
 setReplaceMethod("sampleData",
                  c("SeqVarData", "AnnotatedDataFrame"),
                  function(x, value) {
-                     if (!identical(x@sampleData$sample.id,
-                                    value$sample.id)) {
+                     seqSetFilter(x, sample.sel=1:.nSampUnfiltered(x), action="push+set", verbose=FALSE)
+                     if (!identical(seqGetData(x, "sample.id"), value$sample.id)) {
                          stop("sample.id does not match GDS file")
                      }
+                     seqSetFilter(x, action="pop", verbose=FALSE)
                      slot(x, "sampleData") <- value
                      x
                  })
@@ -83,10 +79,11 @@ setMethod("variantData",
 setReplaceMethod("variantData",
                  c("SeqVarData", "AnnotatedDataFrame"),
                  function(x, value) {
-                     if (!identical(x@variantData$variant.id,
-                                    value$variant.id)) {
+                     seqSetFilter(x, variant.sel=1:.nVarUnfiltered(x), action="push+set", verbose=FALSE)
+                     if (!identical(seqGetData(x, "variant.id"), value$variant.id)) {
                          stop("variant.id does not match GDS file")
                      }
+                     seqSetFilter(x, action="pop", verbose=FALSE)
                      slot(x, "variantData") <- value
                      x
                  })
